--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -15,31 +15,41 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 37%;
-  height: 150px;
+  padding: 0 23%;
+  height: 82px;
+  box-shadow: 0px 0px 25px gray;
+ 
 }
 
 .menu {
+  // background: red;
+  justify-content: space-between;
+  width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  // padding: 0 150px;
+  // margin-right: -10%;
+}
+
+.nav-link:hover{
+  color: #3E92CC !important;
 }
 
 .item {
   margin: 0 15px;
   font-size: 18px;
-  // font-weight: 600;
   cursor: pointer;
   color: black;
+  justify-content: space-between;
+  align-items: center;
 }
+
 
 .item-Name {
   color: black;
   h5,
   p {
-    width: 250px;
-    // background-color: red;
+    width: 480px;
+    
     font-size: 15px;
     text-align: center;
   }
@@ -125,7 +135,7 @@ label {
 }
 
 .container-sect2 {
-  background-color: rgba(19, 41, 61, 0.8);
+  background-color: rgba(19, 41, 61, 0.9);
   position: absolute;
   width: 100%;
   height: 84vh;
@@ -180,6 +190,7 @@ label {
   font-size: 24px;
   margin: 14px;
 }
+
 
 i:hover {
   color: #3E92CC;
@@ -237,9 +248,9 @@ p {
 
 .brand-img {
   position: absolute;
-  left: 48%;
+  left: 43.5%;
   border: 5px solid rgb(255, 252, 252);
-  width: 133px;
+  width: 1468px;
   border-radius: 50%;
 }
 
@@ -332,9 +343,6 @@ p {
   color: #777878;
 }
 
-.text-header-right{
-
-}
 
 
 .container-left{
@@ -407,4 +415,9 @@ margin: 20% 5%;
   50%{
     border-color: transparent;
   }
+}
+
+
+.container-About{
+  
 }
