--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -354,10 +354,10 @@
   </label>
   <ul class="menu">
     <li class="item">
-      <a href="#Home" class="nav-link" #item>Home</a>
+      <a href="#Home" class="nav-link" #item>Inicio</a>
     </li>
     <li class="item">
-      <a href="#About" class="nav-link" #item1>About</a>
+      <a href="#About" class="nav-link" #item1>Sobre mi</a>
     </li>
     <img
       #itemImg
@@ -376,7 +376,7 @@
       <a href="#Proyectos" class="nav-link" #item2>Proyectos</a>
     </li>
     <li class="item">
-      <a href="#Contactos" class="nav-link" #item3>Contactos</a>
+      <a href="#Contactos" class="nav-link" #item3>Contacto</a>
     </li>
   </ul>
 </header>
