--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -34,11 +34,7 @@
           ><i class="bi bi-github" aria-hidden="true"></i
         ></a>
       </li>
-      <li>
-        <a href="https://wa.link/8c3n58" class="social-link" target="_blank"
-          ><i class="bi bi-whatsapp" aria-hidden="true"></i
-        ></a>
-      </li>
+      
       <li>
         <a
         href="https://www.tiktok.com/@jonnathanuzhca?_t=8mc22cFs8OL&_r=1"
@@ -381,9 +377,10 @@
   </ul>
 </header>
 
+<div  class="body-pagina">
 <section id="About">
-  <div class="container-About"  style="height: 1150px;">
-    <h1>About</h1>
+  <div class="container-About">
+    <app-about></app-about>
   </div>
   
 </section>
@@ -395,3 +392,5 @@
 <section id="Contactos" style="height: 1150px;">
   <h1>Contactos</h1>
 </section>
+</div>
+
