--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -138,7 +138,7 @@ label {
   background-color: rgba(19, 41, 61, 0.9);
   position: absolute;
   width: 100%;
-  height: 84vh;
+  height: 86vh;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -150,7 +150,7 @@ label {
 .container-menu {
   overflow-x: hidden;
   width: 100%;
-  height: 84vh;
+  height: 86vh;
   background-image: url('/assets/img/wallpapers/header.jpg');
   background-position: center;
   background-size: cover;
@@ -417,7 +417,22 @@ margin: 20% 5%;
   }
 }
 
+.body-pagina{
+  // width: 100%;
+  // height: 100vh;
+  // margin: 65px;
+  position: inherit;
+  padding: 80px 15%;
+
+  // background: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
 
 .container-About{
+  // border: 1px solid;
+  // background: red;
+  // position: relative;
+  padding: 50px 0;
+  // width: 100%;
+  // height: 82vh;
   
 }
