--- a/src/app/public/components/about/about.component.scss
+++ b/src/app/public/components/about/about.component.scss
@@ -1,7 +1,6 @@
 .container-about-all{
-    margin: 120px 0;
+    margin: 100px 0 8px;
     padding: 0;
-    // position: relative;
 }
 
 .container-about-all:hover{
@@ -23,6 +22,7 @@
     background-position: left bottom;
     transition: background-size 700ms  ease-in-out;
 }
+
 a{
     text-decoration: none;
     color: black;
@@ -32,30 +32,23 @@ a:hover{
     color: white;
 }
 
-
-
-
 .container-about-text{
-    // border: 1px solid;
-    margin: 10px;
-    // padding: 10px;
-    
-    // background-color: blue;
-    
+    // position: relative;
+    // margin: 10px 0px;
+    // z-index: 1;
+    border: 1px solid;
+    text-align: center;
+    padding: 15px 45px;
+    margin: 12px 0;
 }
 
-.about-text{
-    border: 1px solid;
-    margin-top: 65%;
-    height: 390px;
-    padding: 30px;
-    text-align: center;
-}
 
 .container-detail{
     background: rgba(0,0,0, 0.1);
+    margin: 12px 0;
     padding: 22px;
     height: 42vh;
+
 }
 
 .information{
@@ -73,9 +66,10 @@ h3{
 
 }
 @media (max-width: 868px) {
-    .about-text{
-    //    background-color: red;
-        height:100%;
-        // margin-top: 100%;
-    }
+    
+}
+
+.container-foto{
+    // background-color: red;
+    width: 100%;
 }
