--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -422,7 +422,7 @@ margin: 20% 5%;
   // height: 100vh;
   // margin: 65px;
   position: inherit;
-  padding: 80px 15%;
+  // background: rgba(19, 41, 61, 0.9);
 
   // background: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
@@ -431,8 +431,32 @@ margin: 20% 5%;
   // border: 1px solid;
   // background: red;
   // position: relative;
-  padding: 50px 0;
+  // background-color: red;
+  padding: 90px 0 0;
   // width: 100%;
-  // height: 82vh;
+  // height: 182vh;
+  // background-color: #29e78e;
+  margin: 80px 20%;
   
+}
+.container-proyect{
+  // background-color: blue;
+  padding: 90px 0 0 ;
+  // display: inline;
+  margin: 0 5%;
+}
+
+@media (max-width: 1440px) {
+  .container-About{
+    // border: 1px solid;
+    // background: red;
+    // position: relative;
+    // background-color: red;
+    // padding: 240px 0 0;
+    // width: 100%;
+    // height: 182vh;
+    // background-color: #29e78e;
+    margin: 80px 14%;
+    
+  }
 }
