--- a/src/app/public/components/proyect/proyect.component.html
+++ b/src/app/public/components/proyect/proyect.component.html
@@ -34,7 +34,7 @@
               aria-label="Basic outlined example"
             >
               <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-eye-fill"></i> Ver
+                <a href="http://172.203.202.117/#/" style="text-decoration: none; color: white;" target="_blank"><i class="bi bi-eye-fill"> Ver</i></a>
               </button>
               <button type="button" class="btn btn-outline-primary">
                 <i class="bi bi-hand-thumbs-up"></i> Me gusta
@@ -74,7 +74,7 @@
               aria-label="Basic outlined example"
             >
               <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-eye-fill"></i> Ver
+                <a href="https://simulab.edutech-project.org/about-us" style="text-decoration: none; color: white;" target="_blank"><i class="bi bi-eye-fill"> Ver</i></a>
               </button>
               <button type="button" class="btn btn-outline-primary">
                 <i class="bi bi-hand-thumbs-up"></i> Me gusta
