--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -390,7 +390,11 @@
     </div>
   </section>
 
-  <section id="Contactos" style="height: 1150px">
+  <section id="Contactos">
     <h1>Contactos</h1>
   </section>
+
+  <footer>
+    <app-footer></app-footer>
+  </footer>
 </div>
