--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -443,7 +443,7 @@ margin: 20% 5%;
   // background-color: blue;
   padding: 90px 0 0 ;
   // display: inline;
-  margin: 0 5%;
+  // margin: 0 5%;
 }
 
 @media (max-width: 1440px) {
