--- a/src/app/public/components/proyect/proyect.component.html
+++ b/src/app/public/components/proyect/proyect.component.html
@@ -4,7 +4,7 @@
 >
   <h3 class="title-section">PROYECTOS DESTACADOS</h3>
   <div class="row"
-  data-aos="zoom-out"
+  data-aos="zoom-in-down"
   data-aos-offset="300"
   data-aos-easing="ease-in-sine"
   >
@@ -14,8 +14,8 @@
           <img
             src="assets/img/proyecto/proyecto1.png"
             alt=""
-            width="100%"
-            height="100%"
+           
+            
           />
 
           <div class="container-text-proyec">
