--- a/src/app/public/components/proyect/proyect.component.scss
+++ b/src/app/public/components/proyect/proyect.component.scss
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .container-proyect-all{
     margin: 0;
     padding: 0;
@@ -39,8 +43,8 @@ h3{
 
 
 .img-proyect{
-    // overflow-x: hidden;
-  
+    overflow-x: hidden;
+    // height: 10% !important;
     position: relative;
     display: flex;
     justify-content: center;
@@ -51,23 +55,27 @@ h3{
 
 img{
     background-position: center;   
-    // background-size: 70% 70%;
+    width: 100%;
+    height: 470px;
     background-size: cover; /* Cubre todo el contenedor */
     background-position: center; /* Centra la imagen */
     // transition: background-size 700ms ease; /* Transición suave para la transformación */
-   
-    cursor: pointer;
+    margin: 0; 
+    padding: 0;
+    // cursor: pointer;
 }
 
 .container-text-proyec{
     position: absolute;
-    display: none;
     background-color: rgba(19, 41, 61, 0.7);
     height: 100%;
-    // margin: 140px 0;
+    opacity: 0;
+    top: 0;
+    left: 0;
     color: white;  
     text-align: center;
     padding: 20% 7%;
+    transition:  opacity  0.6s  ease-in-out;
     h2{
         font-size: 42px;
     }
@@ -75,7 +83,8 @@ img{
 }
 .container-img:hover{
     .container-text-proyec{
-        display: initial;
+        // display: initial;
+        opacity: 2;
     }
 }
 
@@ -232,16 +241,17 @@ img{
 
 
 
-.im{
+// .im{
     
-    background-size: 160% 160%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
+//     background-size: 160% 160%;
+//     background-repeat: no-repeat;
+//     background-position: center;
+// }
 
 .container-img{
     // flex-wrap: no-wrap;
-    margin: 12px 0;
-    // height: 60vh;
+    // margin: 12px 0;
+    // width:;
+    // height: 12px;
     // background-color: #3E92CC;
 }
