--- a/src/app/public/components/proyect/proyect.component.html
+++ b/src/app/public/components/proyect/proyect.component.html
@@ -1,12 +1,12 @@
+<!-- data-aos="zoom-in-down"
+data-aos-offset="300"
+data-aos-easing="ease-in-sine" -->
 <div
   class="container-proyect-all"
   
 >
   <h3 class="title-section">PROYECTOS DESTACADOS</h3>
   <div class="row"
-  data-aos="zoom-in-down"
-  data-aos-offset="300"
-  data-aos-easing="ease-in-sine"
   >
     <div class="col-xl-4 col-md-4 col-md-6">
       <div class="container-img">
