--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -5,39 +5,38 @@
 .container-footer{
     overflow-x: hidden;
   width: 100%;
-  height: 65vh;
+  // height: 65vh;
   background-image: url('/assets/img/wallpapers/footer1.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 //   display: flex;
-//   justify-content: center;
-//   align-items: center;
+
 }
 
 .container-center-text{
 background-color: rgba($color: #16324F, $alpha: 0.95);
 //   position: absolute;
   width: 100%;
-  height: 44vh;
+  // height: 70%;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-//   display: flex;
+  // display: flex;
   justify-content: center;
-//   align-items: center; 
+  align-items: center; 
 }
 
 .container-footer-botton{
-    height: 13vh;
+    height: 342px;;
 }
 
 .container-footer-top{
     background: #13293D;
     width: 100%;
-    height: 8vh;
+    height: 10%;
     color: white;
     text-align: center;
     padding: 30PX 10px ;
@@ -53,8 +52,122 @@ background-color: rgba($color: #16324F, $alpha: 0.95);
 
 
 .container-center-texto-2{
-    // position: ab;
-    // display: flex;
-    // margin-top: -12px !important;
-    margin: 62px 250px;
+    margin: 0px 15%;
+}
+
+.container-center-text-footer{
+  padding: 12px 12px;
+  // height: 69%;
+}
+
+.container-logo-text{
+  color: white;
+  margin: 52px 44px;
+  h2{
+    margin: 15px 0;
+  }
+  p{
+    text-align: justify;
+  }
+}
+
+.social-icons {
+  list-style-type: none;
+  margin: 23px 0px;
+  font-size: 33px;
+  display: flex;
+  -webkit-justify-content: space-between;
+  max-width: 230px;
+  
+  a{
+    color: white;
+  }
+}
+
+.icons-function{
+  list-style-type: none;
+  margin: 10px 50px;
+  font-size: 30px;
+  -webkit-justify-content:space-between;
+  // max-width: 450px;
+  justify-content: space-between;
+  li{
+    margin: 12px 0;
+  }
+  // a{
+  //   color: white;
+  //   // margin: 10px 0px;
+  // }
+
+}
+
+.container-donde{
+  color: white;
+  margin: 52px 44px;
+  h2{
+    margin: 15px 0;
+  }
+  p{
+    text-align: justify;
+  }
+}
+
+.weather{
+  // background-color: red;
+  background: rgba($color: #000000, $alpha: 0.7);
+  color: white;
+  height: 342px;
+  // padding: 1% 0%;
+  text-align: center;
+  z-index: 2;
+  // margin: 25% 0%;
+  h1{
+    font-size: 60px;
+  }
+  span{
+    color: #000000;
+    font-size: 23px;
+  }
+  h3{
+    color: #000000;
+  }
+}
+
+.posponer{
+  position: relative;
+  z-index: 2;
+}
+
+.banner{
+  position: relative;
+  width: 100%;
+  // height: 100vh;
+  height: 342px;
+
+}
+
+.banner .clouds{
+  position: absolute;
+  top: 0;
+  left: 0; 
+  width: 100%;
+  height:342px;
+  // height: 100vh;
+  overflow: hidden;
+}
+
+.banner .clouds img {
+  position: absolute;
+  bottom: 0;
+  max-width: 100%;
+  animation: animate calc(8s * var(--i)) linear infinite;
+}
+
+@keyframes animate {
+  0%{
+    transform:  translateX(-100%);
+  }
+  100%{
+    transform: translateX(100%);
+  }
 }
