--- a/src/app/public/components/about/about.component.scss
+++ b/src/app/public/components/about/about.component.scss
@@ -44,10 +44,11 @@ a:hover{
 
 
 .container-detail{
-    background: rgba(0,0,0, 0.1);
+    background: #246fa5;
     margin: 12px 0;
     padding: 22px;
     height: 100%;
+    color: white;
 
 }
 
