--- a/src/app/public/components/proyect/proyect.component.html
+++ b/src/app/public/components/proyect/proyect.component.html
@@ -1,23 +1,19 @@
 <!-- data-aos="zoom-in-down"
 data-aos-offset="300"
 data-aos-easing="ease-in-sine" -->
-<div
-  class="container-proyect-all"
-  
->
+<div class="container-proyect-all">
   <h3 class="title-section">PROYECTOS DESTACADOS</h3>
-  <div class="row"
-  >
+  <p class="text-paragram">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro perferendis
+    voluptatum beatae libero laboriosam, totam dolorem eaque nihil! Minima,
+    minus laborum quisquam officia aperiam doloremque earum. Nemo sequi quisquam
+    voluptas?
+  </p>
+  <div class="row">
     <div class="col-xl-4 col-md-4 col-md-6">
       <div class="container-img">
         <div class="img-proyect">
-          <img
-            src="assets/img/proyecto/proyecto1.png"
-            alt=""
-           
-            
-          />
-
+          <img src="assets/img/proyecto/proyecto1.png" alt="" />
           <div class="container-text-proyec">
             <h2>JF All Jobs</h2>
             <span class="subtitle">Desarrollo Frontedn | Backend</span>
@@ -34,7 +30,12 @@ data-aos-easing="ease-in-sine" -->
               aria-label="Basic outlined example"
             >
               <button type="button" class="btn btn-outline-primary">
-                <a href="http://172.203.202.117/#/" style="text-decoration: none; color: white;" target="_blank"><i class="bi bi-eye-fill"> Ver</i></a>
+                <a
+                  href="http://172.203.202.117/#/"
+                  style="text-decoration: none; color: white"
+                  target="_blank"
+                  ><i class="bi bi-eye-fill"> Ver</i></a
+                >
               </button>
               <button type="button" class="btn btn-outline-primary">
                 <i class="bi bi-hand-thumbs-up"></i> Me gusta
@@ -74,7 +75,12 @@ data-aos-easing="ease-in-sine" -->
               aria-label="Basic outlined example"
             >
               <button type="button" class="btn btn-outline-primary">
-                <a href="https://simulab.edutech-project.org/about-us" style="text-decoration: none; color: white;" target="_blank"><i class="bi bi-eye-fill"> Ver</i></a>
+                <a
+                  href="https://simulab.edutech-project.org/about-us"
+                  style="text-decoration: none; color: white"
+                  target="_blank"
+                  ><i class="bi bi-eye-fill"> Ver</i></a
+                >
               </button>
               <button type="button" class="btn btn-outline-primary">
                 <i class="bi bi-hand-thumbs-up"></i> Me gusta
