--- a/src/app/public/components/proyect/proyect.component.scss
+++ b/src/app/public/components/proyect/proyect.component.scss
@@ -3,8 +3,9 @@
     padding: 0;
 }
 .container-proyect-all{
-    margin: 0;
-    padding: 0;
+    // background: rgba(0,);
+    margin: 100px;
+    // padding:  ;
 }
 h3{
     font-size: 40px;
@@ -17,20 +18,28 @@ h3{
 
 }
 
+.text-paragram{
+    font-size: 19px;
+    text-align: center;
+    color: white;
+    margin: 40px 290px;
+}
+
 .container-proyect-all:hover{
     .title-section{
-        background-size: 20% 6px;
+        background-size: 25% 6px;
     }
 
 }
 
 .title-section{
     
-    background-image: linear-gradient(90deg, #3E92CC, #3E92CC, #3E92CC);
+    background-image: linear-gradient(90deg, #59a6d7, #59a6d7, #59a6d7);
     text-decoration: none;
     font-weight: bold;
     cursor: pointer;
     background-repeat: no-repeat;
+    color: white;
     margin: 40px;
     background-size: 0% 5px;
     background-position: center bottom;
@@ -67,7 +76,7 @@ img{
 
 .container-text-proyec{
     position: absolute;
-    background-color: rgba(19, 41, 61, 0.7);
+    background-color: rgba($color: #1d415d, $alpha: 0.7);
     height: 100%;
     opacity: 0;
     top: 0;
@@ -236,22 +245,6 @@ img{
     }
 }
 
-
-
-
-
-
-// .im{
-    
-//     background-size: 160% 160%;
-//     background-repeat: no-repeat;
-//     background-position: center;
-// }
-
 .container-img{
-    // flex-wrap: no-wrap;
-    // margin: 12px 0;
-    // width:;
-    // height: 12px;
-    // background-color: #3E92CC;
+    margin: 8px;
 }
