--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -440,8 +440,8 @@ margin: 20% 5%;
   
 }
 .container-proyect{
-  // background-color: blue;
-  padding: 90px 0 0 ;
+  background-color: rgba($color: #1e5986, $alpha: 1.0);
+  padding: 20px 0  ;
   // display: inline;
   // margin: 0 5%;
 }
