--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -16,7 +16,7 @@
 }
 
 .container-center-text{
-background-color: rgba($color: #16324F, $alpha: 0.95);
+background-color: rgba($color: #16324F, $alpha: 0.7);
 //   position: absolute;
   width: 100%;
   // height: 70%;
@@ -43,7 +43,7 @@ background-color: rgba($color: #16324F, $alpha: 0.95);
     font-size: 12px;
     background-image: linear-gradient(90deg, #3E92CC, #3E92CC, #3E92CC);
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 500;
     cursor: pointer;
     background-repeat: no-repeat;
     background-size: 90% 1px;
