--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -391,7 +391,9 @@
   </section>
 
   <section id="Contactos">
-    <h1>Contactos</h1>
+    <div class="container-contact">
+      <app-contact></app-contact>
+    </div>
   </section>
 
   <footer>
