--- a/src/app/public/components/proyect/proyect.component.html
+++ b/src/app/public/components/proyect/proyect.component.html
@@ -3,14 +3,14 @@ data-aos-offset="300"
 data-aos-easing="ease-in-sine" -->
 <div class="container-proyect-all">
   <h3 class="title-section">PROYECTOS DESTACADOS</h3>
-  <p class="text-paragram">
+  <!-- <p class="text-paragram">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro perferendis
     voluptatum beatae libero laboriosam, totam dolorem eaque nihil! Minima,
     minus laborum quisquam officia aperiam doloremque earum. Nemo sequi quisquam
     voluptas?
-  </p>
+  </p> -->
   <div class="row">
-    <div class="col-xl-4 col-md-4 col-md-6">
+    <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="container-img">
         <div class="img-proyect">
           <img src="assets/img/proyecto/proyecto1.png" alt="" />
@@ -48,14 +48,12 @@ data-aos-easing="ease-in-sine" -->
         </div>
       </div>
     </div>
-    <div class="col-xl-4 col-md-4 col-md-6">
+    <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="container-img">
         <div class="img-proyect">
           <img
             src="assets/img/proyecto/proyecto2.png"
             alt=""
-            width="100%"
-            height="100%"
           />
 
           <div class="container-text-proyec">
@@ -93,14 +91,12 @@ data-aos-easing="ease-in-sine" -->
         </div>
       </div>
     </div>
-    <div class="col-xl-4 col-md-4 col-md-6">
+    <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="container-img">
         <div class="img-proyect">
           <img
             src="assets/img/proyecto/proyecto1.png"
             alt=""
-            width="100%"
-            height="100%"
           />
 
           <div class="container-text-proyec">
@@ -132,14 +128,12 @@ data-aos-easing="ease-in-sine" -->
         </div>
       </div>
     </div>
-    <div class="col-xl-4 col-md-4 col-md-6">
+    <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="container-img">
         <div class="img-proyect">
           <img
             src="assets/img/proyecto/proyecto1.png"
             alt=""
-            width="100%"
-            height="100%"
           />
 
           <div class="container-text-proyec">
