--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -7,9 +7,7 @@
 }
 
 header {
-  // background-color: red;
   width: 100%;
-  // position: fixed;
   top: 0;
   left: 0;
   display: flex;
@@ -18,16 +16,14 @@ header {
   padding: 0 23%;
   height: 82px;
   box-shadow: 0px 0px 25px gray;
- 
+
 }
 
 .menu {
-  // background: red;
   justify-content: space-between;
   width: 100%;
   display: flex;
   align-items: center;
-  // margin-right: -10%;
 }
 
 .nav-link:hover{
@@ -115,8 +111,6 @@ label {
 
   .header-content {
     width: 100%;
-    // left: 17%;
-    // background-color: red;
   }
 
   .social-icons {
@@ -125,7 +119,6 @@ label {
   }
 
   .header-content {
-    // background-color: red;
     width: 90%;
     padding: 0 0;
   }
@@ -163,14 +156,11 @@ label {
 
 .social-icons {
   list-style-type: none;
-  // padding-right: -10px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   right: 40%;
-  // bottom: 100%;
-  // right: 40px;
   margin-bottom: 720px;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
@@ -195,20 +185,14 @@ label {
 i:hover {
   color: #3E92CC;
   cursor: pointer;
-  // width: 235px !important;
   transform: scale(1.8);
-  // font-size: 40px;
-  // animation: spin 2s linear infinite;
 }
 
 i {
   color: white;
-
   display: inline-block;
   font-size: 24px;
   transition: transform 0.3s ease;
-
-  // animation: spin 2s linear infinite;
 }
 
 .header-content {
@@ -216,9 +200,7 @@ i {
 }
 
 .header-content {
-  // width: 100%;
   position: absolute;
-  // left: 17%;
   top: 55%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -228,16 +210,12 @@ i {
 
 .content-slogan {
   display: flex;
-  // background-color: red;
   width: 350px;
   height: 40px;
   color: #fff;
   font-size: 20px;
   line-height: 40px;
   position: absolute;
-  // left: 0;
-  // right: 0;
-  // margin: 0;
   overflow: hidden;
 }
 
@@ -256,7 +234,6 @@ p {
 
 .slogan {
   list-style: none;
-  // padding-left: 10px;
   animation: cambiar 7s infinite;
 }
 
@@ -314,7 +291,6 @@ p {
   font-weight: 400;
 }
 .auto{
-  // background-color: red;
   height: 65vh;
 }
 
@@ -326,7 +302,6 @@ p {
   padding: 18px;
   left: 100%;
   border-radius: 15px;
-  // position: initial;
 }
 
 .focoRight{
@@ -349,7 +324,6 @@ p {
 margin: 20% 5%;
 }
 .container-title-haeder{
-  // background-color: red;
   display: flex;
   justify-content: space-between;
 
@@ -359,23 +333,20 @@ margin: 20% 5%;
 
 .container-paragran{
   margin: 20px 40px;
-  // background-color: red;
 }
 
 .textConta{
   width: 100%;
   height: 100vh;
-  // display: flex;
   align-items: center;
   justify-content: center;
-
-
 }
+
 .highlight {
-  color: white; /* Cambia el color aquí */
+  color: white;
 }
 .verde{
-  color: rgb(172, 250, 45); /* Cambia el color aquí */
+  color: rgb(172, 250, 45); 
 }
 .yellow{
   color: yellow;
@@ -398,11 +369,6 @@ margin: 20% 5%;
 
 .text{
   color: white;
-  // animation: animacion 2.5s steps(135), transparent .5s step-end infinite alternate;
-  // width: 32.1em;
-  // white-space: nowrap;
-  // overflow: hidden;
-  // border-right: 1px solid;
 }
 
 @keyframes animacion{
@@ -418,44 +384,27 @@ margin: 20% 5%;
 }
 
 .body-pagina{
-  // width: 100%;
-  // height: 100vh;
-  // margin: 65px;
   position: inherit;
-  // background: rgba(19, 41, 61, 0.9);
-
-  // background: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 }
 
 .container-About{
-  // border: 1px solid;
-  // background: red;
-  // position: relative;
-  // background-color: red;
   padding: 90px 0 0;
-  // width: 100%;
-  // height: 182vh;
-  // background-color: #29e78e;
   margin: 80px 20%;
-  
 }
+
 .container-proyect{
   background-color: rgba($color: #1e5986, $alpha: 1.0);
-  padding: 20px 0  ;
-  // display: inline;
-  // margin: 0 5%;
+  padding: 20px 0;
+}
+
+.container-contact{
+  background-color: #29e78e;
+  margin: 0;
+  padding: 0;
 }
 
 @media (max-width: 1440px) {
   .container-About{
-    // border: 1px solid;
-    // background: red;
-    // position: relative;
-    // background-color: red;
-    // padding: 240px 0 0;
-    // width: 100%;
-    // height: 182vh;
-    // background-color: #29e78e;
     margin: 80px 14%;
     
   }
