--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,72 +1,72 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.container-footer{
-    overflow-x: hidden;
+
+.container-footer {
+  overflow-x: hidden;
   width: 100%;
   // height: 65vh;
-  background-image: url('/assets/img/wallpapers/footer1.jpg');
+  background-image: url("/assets/img/wallpapers/footer1.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-//   display: flex;
-
+  //   display: flex;
 }
 
-.container-center-text{
-background-color: rgba($color: #16324F, $alpha: 0.7);
-//   position: absolute;
+.container-center-text {
+  background-color: rgba($color: #16324f, $alpha: 0.7);
+  //   position: absolute;
   width: 100%;
   // height: 70%;
+  // margin: 0;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   // display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
 
-.container-footer-botton{
-    height: 342px;;
+.container-footer-botton {
+  height: 342px;
 }
 
-.container-footer-top{
-    background: #13293D;
-    width: 100%;
-    height: 10%;
-    color: white;
-    text-align: center;
-    padding: 30PX 10px ;
-    font-size: 12px;
-    background-image: linear-gradient(90deg, #3E92CC, #3E92CC, #3E92CC);
-    text-decoration: none;
-    font-weight: 500;
-    cursor: pointer;
-    background-repeat: no-repeat;
-    background-size: 90% 1px;
-    background-position: center top;
+.container-footer-top {
+  background: #13293d;
+  width: 100%;
+  height: 10%;
+  color: white;
+  text-align: center;
+  padding: 30px 10px;
+  font-size: 12px;
+  background-image: linear-gradient(90deg, #3e92cc, #3e92cc, #3e92cc);
+  text-decoration: none;
+  font-weight: 500;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-size: 90% 1px;
+  background-position: center top;
 }
 
-
-.container-center-texto-2{
-    margin: 0px 15%;
+.container-center-texto-2 {
+  margin: 0px 15%;
 }
 
-.container-center-text-footer{
+.container-center-text-footer {
   padding: 12px 12px;
   // height: 69%;
 }
 
-.container-logo-text{
+.container-logo-text {
   color: white;
   margin: 52px 44px;
-  h2{
+  h2 {
     margin: 15px 0;
   }
-  p{
+  p {
     text-align: justify;
   }
 }
@@ -78,80 +78,78 @@ background-color: rgba($color: #16324F, $alpha: 0.7);
   display: flex;
   -webkit-justify-content: space-between;
   max-width: 230px;
-  
-  a{
+
+  a {
     color: white;
   }
 }
 
-.icons-function{
+.icons-function {
   list-style-type: none;
   margin: 10px 50px;
   font-size: 30px;
-  -webkit-justify-content:space-between;
+  -webkit-justify-content: space-between;
   // max-width: 450px;
   justify-content: space-between;
-  li{
+  li {
     margin: 12px 0;
   }
   // a{
   //   color: white;
   //   // margin: 10px 0px;
   // }
-
 }
 
-.container-donde{
+.container-donde {
   color: white;
   margin: 52px 44px;
-  h2{
+  h2 {
     margin: 15px 0;
   }
-  p{
+  p {
     text-align: justify;
   }
 }
 
-.weather{
+.weather {
   // background-color: red;
   background: rgba($color: #000000, $alpha: 0.7);
-  color: white;
+  color: rgb(0, 0, 0);
   height: 342px;
   // padding: 1% 0%;
   text-align: center;
   z-index: 2;
   // margin: 25% 0%;
-  h1{
+  h1 {
     font-size: 60px;
   }
-  span{
+  span {
     color: #000000;
     font-size: 23px;
   }
-  h3{
+  h3 {
     color: #000000;
   }
 }
 
-.posponer{
+.posponer {
   position: relative;
   z-index: 2;
 }
 
-.banner{
+.banner {
   position: relative;
   width: 100%;
   // height: 100vh;
   height: 342px;
-
 }
 
-.banner .clouds{
+.banner .clouds {
   position: absolute;
   top: 0;
-  left: 0; 
+  left: 0;
   width: 100%;
-  height:342px;
+  height: 342px;
   // height: 100vh;
   overflow: hidden;
 }
@@ -164,10 +162,34 @@ background-color: rgba($color: #16324F, $alpha: 0.7);
 }
 
 @keyframes animate {
-  0%{
-    transform:  translateX(-100%);
+  0% {
+    transform: translateX(-100%);
   }
-  100%{
+  100% {
     transform: translateX(100%);
+  }
+}
+
+@media (max-width: 1500px) {
+  .container-center-texto-2 {
+    margin: 0px 8%;
+  }
+}
+
+@media (max-width: 980px) {
+  .container-center-texto-2 {
+    margin: 0px 7%;
+  }
+}
+
+@media (max-width: 850px) {
+  .container-center-texto-2 {
+    margin: 0px 2%;
+  }
+}
+
+@media (max-width: 380px) {
+  .container-center-texto-2 {
+    margin: 0px 1%;
   }
 }
