--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -69,8 +69,9 @@
             <p>
               {{ paragran }}
             </p>
-            <button class="btn btn-primary">
-              <i class="ti-printer pr-2"></i>Leer mas
+            <!-- <br> -->
+            <button class="btn btn-outline-primary" style="width: 170px; color: white; padding: 8px; margin: 17px 0;">
+              <i class="bi bi-download"></i> &nbsp;Descargar CV 
             </button>
           </div>
         </div>
@@ -381,6 +382,18 @@
   <section id="About">
     <div class="container-About">
       <app-about></app-about>
+    </div>
+  </section>
+
+  <section>
+    <div class="container-experient">
+
+    </div>
+  </section>
+
+  <section>
+    <div class="container-hability">
+      <app-hability></app-hability>
     </div>
   </section>
 
