--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -109,7 +109,7 @@
         </div>
 
         <div
-          *ngIf="weather?.current?.cloud <= 70 && weather?.current?.cloud >= 50"
+          *ngIf="weather?.current?.cloud <= 70 && weather?.current?.cloud >= 51"
         >
           <div class="clouds">
             <img src="assets/img/weather/cloud2.png" alt="" style="--i: 2" />
@@ -124,8 +124,8 @@
           <div class="clouds">
             <img src="assets/img/weather/cloud1.png" alt="" style="--i: 1" />
             <img src="assets/img/weather/cloud2.png" alt="" style="--i: 2" />
-            <img src="assets/img/weather/cloud4.png" alt="" style="--i: 4" />
-            <img src="assets/img/weather/cloud2.png" alt="" style="--i: 7" />
+            <img src="assets/img/weather/cloud3.png" alt="" style="--i: 4" />
+            <!-- <img src="assets/img/weather/cloud2.png" alt="" style="--i: 7" /> -->
           </div>
         </div>
         <div
