--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -393,7 +393,15 @@
 
   <section>
     <div class="container-hability">
-      <app-hability></app-hability>
+     <div class="row">
+      <div class="col-lg-6">
+
+      </div>
+      <div class="col-lg-6">
+        <app-hability></app-hability>
+      </div>
+     </div>
+      
     </div>
   </section>
 
