--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -395,7 +395,7 @@
     <div class="container-hability">
      <div class="row">
       <div class="col-lg-6">
-
+        <app-competences></app-competences>
       </div>
       <div class="col-lg-6">
         <app-hability></app-hability>
