--- a/src/app/public/components/hability/hability.component.scss
+++ b/src/app/public/components/hability/hability.component.scss
@@ -128,7 +128,7 @@ margin-top: -500px;
 }
 .contentIcons{
     // background-color: rgb(153, 131, 51);
-    height: 744vh;
+    // height: 744vh;
     margin: 0;
     padding: 0;
     // height: 922px;
