--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -1,1 +1,12 @@
 <router-outlet></router-outlet>
+
+<!-- ¡Hola! Soy Jonathan, un apasionado desarrollador de software con experiencia
+tanto en frontend como en backend. Me encanta crear soluciones eficientes y
+atractivas utilizando tecnologías como Angular, Bootstrap y Angular Material. En
+el backend, tengo experiencia trabajando con Django REST Framework y Babel, lo
+que me permite manejar aplicaciones web de manera integral. Soy una persona
+entusiasta y siempre estoy buscando aprender y mejorar mis habilidades. Me gusta
+enfrentar nuevos desafíos y encontrar maneras innovadoras de resolver problemas.
+Además, soy responsable y comprometido con cada proyecto en el que trabajo. Si
+estás buscando a alguien con una mezcla de habilidades técnicas y una actitud
+positiva, ¡me encantaría colaborar contigo! -->
