--- a/src/app/public/components/competences/competences.component.html
+++ b/src/app/public/components/competences/competences.component.html
@@ -2,75 +2,150 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="text">
-        <h2>MIS HABILIDADES</h2>
+        <h2 class="title-section">MIS HABILIDADES</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos
-          voluptatibus facilis debitis assumenda veniam fugit corrupti tempore
-          expedita animi voluptatem maxime corporis temporibus deleniti, cum
-          earum fuga nesciunt at vitae.
+          Como ingeniero de sistemas, poseo una sólida formación en desarrollo
+          de software y una pasión constante por aprender y aplicar nuevas
+          tecnologías. Mis habilidades abarcan tanto el frontend como el
+          backend, permitiéndome diseñar y desarrollar soluciones completas y
+          robustas. Entre mis competencias se destacan:
         </p>
       </div>
       <div class="container-progress">
-
         <div class="progress-data">
-            <h6>Apoyar y cooperar</h6>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" [style.width.%]="cont1" style="font-size: 17px;" >{{cont1}}%</div>
-            </div>
-          </div>
-
-        <div class="progress-data">
-          <h6>Crear y conceptualizar</h6>
+          <h6>Frontend Development</h6>
           <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="cont2" style="font-size: 17px;">{{cont2}}%</div>
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              [style.width.%]="cont1"
+              style="font-size: 17px"
+            >
+              {{ cont1 }}%
+            </div>
           </div>
         </div>
 
-        
-
-          <div class="progress-data">
-            <h6>Honestidad</h6>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="cont3" style="font-size: 17px;">{{cont3}}%</div>
+        <div class="progress-data">
+          <h6>Backend Development</h6>
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              [style.width.%]="cont2"
+              style="font-size: 17px"
+            >
+              {{ cont2 }}%
             </div>
           </div>
+        </div>
 
-         
-
-          <div class="progress-data">
-            <h6>Responsabilidad</h6>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="cont4" style="font-size: 17px;">{{cont4}}%</div>
+        <div class="progress-data">
+          <h6>Herramientas y Tecnologías</h6>
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              [style.width.%]="cont3"
+              style="font-size: 17px"
+            >
+              {{ cont3 }}%
             </div>
           </div>
+        </div>
 
-          <div class="progress-data">
-            <h6>Toma de decisiones</h6>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="cont5" style="font-size: 17px;">{{cont5}}%</div>
+        <div class="progress-data">
+          <h6>Metodologías de Desarrollo</h6>
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              [style.width.%]="cont4"
+              style="font-size: 17px"
+            >
+              {{ cont4 }}%
             </div>
           </div>
-          <div class="progress-data">
-            <h6>Analizar y interpretar</h6>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="cont6" style="font-size: 17px;">{{cont6}}%</div>
-            </div>
-          </div>
+        </div>
 
-          <div class="progress-data">
-            <h6>Trabajo en equipo</h6>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="cont7" style=" font-size: 17px;">{{cont7}}%</div>
+        <div class="progress-data">
+          <h6>Diseño Responsivo y UI/UX</h6>
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              [style.width.%]="cont5"
+              style="font-size: 17px"
+            >
+              {{ cont5 }}%
             </div>
           </div>
+        </div>
+        <div class="progress-data">
+          <h6>Resolución de Problemas</h6>
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              [style.width.%]="cont6"
+              style="font-size: 17px"
+            >
+              {{ cont6 }}%
+            </div>
+          </div>
+        </div>
 
-          <div class="progress-data">
-            <h6>Organizar y ejecutar</h6>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" [style.width.%]="cont8" style="font-size: 17px;">{{cont8}}%</div>
+        <div class="progress-data">
+          <h6>Trabajo en Equipo y Comunicación</h6>
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              [style.width.%]="cont7"
+              style="font-size: 17px"
+            >
+              {{ cont7 }}%
             </div>
           </div>
-         
+        </div>
+
+        <div class="progress-data">
+          <h6>Organizar y ejecutar</h6>
+          <div class="progress">
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              [style.width.%]="cont8"
+              style="font-size: 17px"
+            >
+              {{ cont8 }}%
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
