--- a/src/app/public/components/competences/competences.component.scss
+++ b/src/app/public/components/competences/competences.component.scss
@@ -1,6 +1,12 @@
 .container-competences-all{
     margin: 124px 212px ;
 }
+.container-competences-all:hover{
+    .title-section{
+        background-size: 35% 6px;
+        // color: black;
+    }
+}
 
 .container-competences-all .text{
     color: white;
@@ -11,4 +17,16 @@
 }
 h6{
     color: white;
+}
+
+.title-section{
+    
+    background-image: linear-gradient(90deg, #3E92CC, #3E92CC, #3E92CC);
+    text-decoration: none;
+    font-weight: bold;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-size: 0% 5px;
+    background-position: left bottom;
+    transition: background-size 700ms  ease-in-out;
 }
