--- a/src/app/public/components/references/references.component.html
+++ b/src/app/public/components/references/references.component.html
@@ -1,1 +1,52 @@
-<p>references works!</p>
+<div class="container-references-all">
+  <div class="contaniner-carrusel">
+    <h2>MIS REFERENCIAS</h2>
+    <div class="carrusel-item">
+      <img src="" alt="" />
+      <div class="carrusel-details">
+        <span>27 de marzo del 2023</span>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+          temporibus cum, eaque nostrum eligendi aliquam sit officiis facilis
+          aliquid illo recusandae expedita amet odit dolor, explicabo sapiente
+          doloremque? Ad, tempore.
+        </p>
+      </div>
+    </div>
+    <div class="carrusel-item">
+      <img src="" alt="" />
+      <div class="carrusel-details">
+        <span>27 de marzo del 2023</span>
+        <p>
+          Ab quidem quam fuga laudantium, vel quia numquam et! Et quae expedita
+          nam ducimus, debitis sequi mollitia rem in adipisci libero odit porro!
+          Dignissimos praesentium earum nam illum, debitis nihil.
+        </p>
+      </div>
+    </div>
+    <div class="carrusel-item">
+      <img src="" alt="" />
+      <div class="carrusel-details">
+        <span>27 de marzo del 2023</span>
+        <p>
+          Illo numquam ratione suscipit exercitationem nesciunt autem saepe
+          animi expedita consectetur mollitia doloribus ut perferendis,
+          quibusdam dolor dignissimos esse? Itaque recusandae amet, at atque
+          quaerat reprehenderit sapiente incidunt deserunt distinctio.
+        </p>
+      </div>
+    </div>
+    <div class="carrusel-item">
+      <img src="" alt="" />
+      <div class="carrusel-details">
+        <span>27 de marzo del 2023</span>
+        <p>
+          Laudantium, reiciendis enim. Corporis, perspiciatis molestiae. Unde
+          obcaecati possimus dolorum tenetur soluta, laudantium sint facilis
+          odit similique, dolor perspiciatis corporis dolore quibusdam! Ex,
+          eius. Laboriosam sequi optio necessitatibus distinctio. Quis.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
