--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -70,7 +70,7 @@
               {{ paragran }}
             </p>
             <!-- <br> -->
-            <button class="btn btn-outline-primary" style="width: 170px; color: white; padding: 8px; margin: 17px 0;">
+            <button class="btn btn-outline-primary" style="width: 170px; height: 52px; color: white; padding: 7px; margin: 17px 0;">
               <i class="bi bi-download"></i> &nbsp;Descargar CV 
             </button>
           </div>
@@ -148,7 +148,7 @@
                           <span class="highlight">&lt;</span>html
                           <span class="verde">lang</span
                           ><span class="highlight">=</span>
-                          <span class="yellow">"en"</span>
+                          <span class="yellow1">"en"</span>
                           <span class="highlight">&gt;</span><br />
                           <span class="highlight">&lt;</span>header<span
                             class="highlight"
@@ -157,7 +157,7 @@
                           &nbsp;&nbsp;<span class="highlight">&lt;</span>meta
                           <span class="verde">charset</span
                           ><span class="highlight">=</span>
-                          <span class="yellow">"UTF-8"</span>
+                          <span class="yellow1">"UTF-8"</span>
                           <span class="highlight">/&gt;</span><br />
                           &nbsp;&nbsp;<span class="highlight">&lt;</span
                           >title<span class="highlight"
@@ -175,7 +175,7 @@
                           &nbsp;&nbsp;<span class="highlight">&lt;</span>div
                           <span class="verde">class</span
                           ><span class="highlight">=</span>
-                          <span class="yellow">"wire_foco"</span>
+                          <span class="yellow1">"wire_foco"</span>
                           <span class="highlight">&gt;</span
                           ><span class="highlight">&lt;/</span>div<span
                             class="highlight"
@@ -185,13 +185,13 @@
                           &nbsp;&nbsp;<span class="highlight">&lt;</span>div
                           <span class="verde">class</span
                           ><span class="highlight">=</span>
-                          <span class="yellow">"container_Prueba"</span>
+                          <span class="yellow1">"container_Prueba"</span>
                           <span class="highlight">&gt;</span><br />
                           &nbsp;&nbsp;&nbsp;&nbsp;<span class="highlight"
                             >&lt;</span
                           >div <span class="verde">class</span
                           ><span class="highlight">=</span>
-                          <span class="yellow">"container_luz"</span>
+                          <span class="yellow1">"container_luz"</span>
                           <span class="highlight">&gt;</span><br />
 
                           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
@@ -233,7 +233,7 @@
                   <div *ngIf="containerText == 1">
                     <p>
                       <code>
-                        <span class="yellow">.container_luz</span>
+                        <span class="yellow1">.container_luz</span>
                         <span class="highlight">{{ "{" }}</span
                         ><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;position: relative;<br />
@@ -247,7 +247,7 @@
                         <span class="highlight">{{ "}" }}</span
                         ><br />
 
-                        <span class="yellow">.container_Prueba</span>
+                        <span class="yellow1">.container_Prueba</span>
                         <span class="highlight">{{ "{" }}</span
                         ><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;position: relative;<br />
@@ -277,14 +277,14 @@
                       ><span class="highlight">;</span>
                       <br />
                       <br />
-                      <span class="yellow">onHeaderFoco</span>(){{ "{" }}<br />
+                      <span class="yellow1">onHeaderFoco</span>(){{ "{" }}<br />
                       &nbsp;<span class="celeste">this</span
                       ><span class="highlight">.</span
                       ><span class="cele">comunicationService</span
                       ><span class="highlight">.</span
                       ><span class="verdeBl">disparadorFoco</span>
                       <span class="highlight">.</span
-                      ><span class="yellow">subcribe</span>((<span class="cele"
+                      ><span class="yellow1">subcribe</span>((<span class="cele"
                         >iten</span
                       >) <span class="celeste">=></span> {{ "{" }} <br />
 
@@ -294,7 +294,7 @@
                       ><span class="highlight">.</span
                       ><span class="cele">renderer</span
                       ><span class="highlight">.</span
-                      ><span class="yellow">setStyle</span>(<span
+                      ><span class="yellow1">setStyle</span>(<span
                         class="celeste"
                         >this</span
                       ><span class="highlight">.</span
@@ -313,7 +313,7 @@
                       ><span class="highlight">.</span
                       ><span class="cele">renderer</span
                       ><span class="highlight">.</span
-                      ><span class="yellow">setStyle</span>(<span
+                      ><span class="yellow1">setStyle</span>(<span
                         class="celeste"
                         >this</span
                       ><span class="highlight">.</span
@@ -402,6 +402,11 @@
       </div>
      </div>
       
+    </div>
+  </section>
+  <section>
+    <div class="container-references">
+      <app-references></app-references>
     </div>
   </section>
 
