--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -349,7 +349,7 @@ margin: 20% 5%;
 .verde{
   color: rgb(172, 250, 45); 
 }
-.yellow{
+.yellow1{
   color: yellow;
 }
 .greent{
@@ -402,6 +402,9 @@ margin: 20% 5%;
     background: rgba(0,0,0,0.9);
     // height: 92vh;
 
+}
+.container-references{
+ margin: 10px 20px; 
 }
 
 // .container-contact{
