--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -398,7 +398,7 @@
         <app-competences></app-competences>
       </div>
       <div class="col-lg-6">
-        <app-hability></app-hability>
+        <!-- <app-hability></app-hability> -->
       </div>
      </div>
       
