--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -403,9 +403,9 @@ margin: 20% 5%;
     // height: 92vh;
 
 }
-.container-references{
- margin: 10px 20px; 
-}
+// .container-references{
+//  margin: 10px 20px; 
+// }
 
 // .container-contact{
 //   background-color: #29e78e;
